--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  //  data access:  //
 ////////////////////
 
-var unhosted = Unhosted();
+var unhosted = Unhosted('myfavouritesandwich');
 
 function unlockUnhostedAccount(userName) {
 	unhosted.setUserName(userName);
